--- a/css/style.css
+++ b/css/style.css
@@ -37,12 +37,12 @@ body {
 }
 
 a {
-    color: #ffca28;
+    color: #f5c931;
 }
 
 a:hover,
 a:focus {
-    color: #ffca28;
+    color: #f5c931;
 }
 
 h1 {
@@ -55,13 +55,13 @@ h1 {
 h2 {
     font-size: 45px;
     font-weight: 300;
-    color: #1976D2;
+    color: #0000ff;
     letter-spacing: -1px;
     margin-bottom: 1rem;
 }
 
 h3 {
-    color: #1976D2;
+    color: #0000ff;
     font-size: 33px;
     font-weight: 500;
 }
@@ -69,13 +69,13 @@ h3 {
 h4 {
     font-size: 20px;
     font-weight: 500;
-    color: #1976D2;
+    color: #0000ff;
 }
 
 h5 {
     font-size: 28px;
     font-weight: 300;
-    color: #1976D2;
+    color: #0000ff;
     margin-bottom: 0.7rem;
 }
 
@@ -84,12 +84,12 @@ p {
 }
 
 p.lead {
-    color: #ffca28;
+    color: #f5c931;
     margin-bottom: 2rem;
 }
 
 .text-primary {
-    color: #ffca28 !important;
+    color: #f5c931 !important;
 }
 
 .light-font {
@@ -105,15 +105,15 @@ p.lead {
 }
 
 .btn-outline-light:hover {
-    color: #ffca28;
+    color: #f5c931;
 }
 
 .btn-primary {
     border-radius: 3px;
-    background-image: -moz-linear-gradient( 122deg, #ffca28 0%, #ffb300 100%);
-    background-image: -webkit-linear-gradient( 122deg, #ffca28 0%, #ffb300 100%);
-    background-image: -ms-linear-gradient( 122deg, #ffca28 0%, #ffb300 100%);
-    background-image: linear-gradient( 122deg, #ffca28 0%, #ffb300 100%);
+    background-image: -moz-linear-gradient( 122deg, #f5c931 0%, #ffb300 100%);
+    background-image: -webkit-linear-gradient( 122deg, #f5c931 0%, #ffb300 100%);
+    background-image: -ms-linear-gradient( 122deg, #f5c931 0%, #ffb300 100%);
+    background-image: linear-gradient( 122deg, #f5c931 0%, #ffb300 100%);
     box-shadow: 0px 9px 32px 0px rgba(0, 0, 0, 0.2);
     font-weight: 500;
     padding: 0.6rem 2rem;
@@ -126,7 +126,7 @@ p.lead {
 .btn-primary:not([disabled]):not(.disabled).active,
 .btn-primary:not([disabled]):not(.disabled):active,
 .show>.btn-primary.dropdown-toggle {
-    background-image: linear-gradient( 122deg, #FF6F00 0%, #FFA000 100%);
+    background-image: linear-gradient( 122deg, #f5c931 0%, #FFA000 100%);
     box-shadow: 0px 9px 32px 0px rgba(0, 0, 0, 0.3);
     color: #FFF;
 }
@@ -137,7 +137,7 @@ p.lead {
     box-shadow: 0px 9px 32px 0px rgba(0, 0, 0, 0.26);
     font-size: 14px;
     font-weight: 500;
-    color: #FFD54F;
+    color: #f5c931;
     margin: 0.5rem;
     padding: 0.7rem 1.6rem;
     line-height: 1.8;
@@ -150,7 +150,7 @@ p.lead {
 }
 
 .light-bg {
-    background-color: rgba(154, 243, 216, 0.137);
+    background-color: rgba(85, 85, 90, 0.075);
 }
 
 .section {
@@ -163,7 +163,8 @@ p.lead {
 }
 
 .section-title small {
-    color: #998a9b;
+    color: #ffffff;
+    text-shadow: 2px 2px 2px #7a767a
 }
 
 @media (max-width:767px) {
@@ -184,12 +185,17 @@ p.lead {
     transition: all 0.3s ease;
 }
 
+.imgs{
+    width: 60px;
+    height:60px;
+}
+
 .nav-menu.is-scrolling,
 .nav-menu.menu-is-open {
-    background-color: #004D40;
-    background: -moz-linear-gradient(135deg, #00695C 0%, #4DB6AC 100%);
-    background: -webkit-linear-gradient(135deg, #00695C 0%, #4DB6AC 100%);
-    background: linear-gradient(135deg, #00695C) 0%, #4DB6AC 100%);
+    background-color: #0000ff;
+    background: -moz-linear-gradient(135deg, #2e2ef5 0%, #6a6af3 100%);
+    background: -webkit-linear-gradient(135deg, #2e2ef5 0%, #6a6af3 100%);
+    background: linear-gradient(135deg, #2e2ef5 0%, #6a6af3 100%);
     -webkit-box-shadow: 0px 5px 23px 0px rgba(0, 0, 0, 0.1);
     -moz-box-shadow: 0px 5px 23px 0px rgba(0, 0, 0, 0.1);
     box-shadow: 0px 5px 23px 0px rgba(0, 0, 0, 0.1);
@@ -211,7 +217,7 @@ p.lead {
     }
     .navbar-nav>.nav-item>.nav-link.active:after {
         content: "";
-        border-bottom: 2px solid #FFD54F;
+        border-bottom: 2px solid #f5c931;
         left: 1rem;
         right: 1rem;
         bottom: 5px;
@@ -240,16 +246,16 @@ header {
 }
 
 .bg-gradient {
-    background-image: -moz-linear-gradient( 135deg, #00897B 0%, #a7ffeb 100%);
-    background-image: -webkit-linear-gradient( 135deg, #00897B 0%, #a7ffeb 100%);
-    background-image: -ms-linear-gradient( 135deg, #00897B 0%, #a7ffeb 100%);
-    background-image: linear-gradient( 135deg, #00897B 0%, #a7ffeb 100%);
+    background-image: -moz-linear-gradient( 135deg, #0000ff 0%, #6a6af3 100%);
+    background-image: -webkit-linear-gradient( 135deg, #0000ff 0%, #6a6af3 100%);
+    background-image: -ms-linear-gradient( 135deg, #0000ff 0%, #6a6af3 100%);
+    background-image: linear-gradient( 135deg, #0000ff 0%, #6a6af3 100%);
 }
 
 .tagline {
     font-size: 23px;
     font-weight: 300;
-    color: #FDD835;
+    color: #ffffff;
     max-width: 800px;
     margin: 0 auto;
 }
@@ -280,10 +286,10 @@ header {
 ----------------------*/
 
 .gradient-fill:before {
-    color: #00695C;
-    background: -moz-linear-gradient(top, #00796B 0%, #4DB6AC 100%);
-    background: -webkit-linear-gradient(top, #00796B 0%, #4DB6AC 100%);
-    background: linear-gradient(to bottom, #00796B 0%, #4DB6AC 100%);
+    color: #0000ff;
+    background: -moz-linear-gradient(top, #0000ff 0%, #6a6af3 100%);
+    background: -webkit-linear-gradient(top, #0000ff 0%, #6a6af3 100%);
+    background: linear-gradient(to bottom, #0000ff 0%, #6a6af3 100%);
     -webkit-background-clip: text;
     background-clip: text;
     -webkit-text-fill-color: transparent;
@@ -309,10 +315,10 @@ header {
     content: "";
     position: absolute;
     width: 3px;
-    color: #00695C;
-    background: -moz-linear-gradient(top, #B2DFDB 10%, #00897B 90%);
-    background: -webkit-linear-gradient(top, #B2DFDB 10%, #00897B 90%);
-    background: linear-gradient(to bottom, #B2DFDB 10%, #00897B 90%);
+    color: #0000ff;
+    background: -moz-linear-gradient(top, #0000ff 10%, #6a6af3 90%);
+    background: -webkit-linear-gradient(top, #0000ff 10%, #6a6af3 90%);
+    background: linear-gradient(to bottom, #0000ff 10%, #6a6af3 90%);
     top: 0;
     bottom: 0;
     left: 0;
@@ -346,7 +352,7 @@ header {
     border-radius: 50%;
     margin-bottom: 1.5rem;
     background-color: #FFF;
-    color: #00897B;
+    color: #0000ff;
     font-size: 48px;
     text-align: center;
     line-height: 80px;
@@ -364,10 +370,10 @@ header {
 }
 
 .ui-steps li:hover .circle-icon {
-    background-image: -moz-linear-gradient( 122deg, #00897B 0%, #00897B 100%);
-    background-image: -webkit-linear-gradient( 122deg, #00897B 0%, #00897B 100%);
-    background-image: -ms-linear-gradient( 122deg, #00897B 0%, #00897B 100%);
-    background-image: linear-gradient( 122deg, #00897B 0%, #00897B 100%);
+    background-image: -moz-linear-gradient( 122deg, #0000ff 0%, #3c3cf7 100%);
+    background-image: -webkit-linear-gradient( 122deg, #0000ff 0%, #3c3cf7 100%);
+    background-image: -ms-linear-gradient( 122deg, #0000ff 0%, #3c3cf7 100%);
+    background-image: linear-gradient( 122deg, #0000ff 0%, #3c3cf7 100%);
     box-shadow: 0px 9px 32px 0px rgba(0, 0, 0, 0.09);
     color: #FFF;
 }
@@ -427,17 +433,19 @@ header {
     padding: 1rem 1rem;
     border-color: #faf6fb #faf6fb #FFF;
     font-size: 19px;
-    color: #80CBC4;
-    background: #E0F2F1;
+    color:  White;
+    background: #0000ff;
 }
 
 .nav-tabs .nav-link.active {
     background: #FFF;
     border-top-width: 3px;
-    border-color: #80CBC4 #faf6fb #FFF;
-    color: #00695C;
+    border-color: #0000ff #faf6fb #FFF;
+    color: #0000ff;
 }
-
+.nav-lnk.active{
+    background: #0000ff;
+}
 
 /*  TESTIMONIALS
 ----------------------*/
@@ -493,11 +501,11 @@ header {
 }
 
 .owl-theme .owl-dots .owl-dot:hover span {
-    background: #ff487e;
+    background: #0000ff;
 }
 
 .owl-theme .owl-dots .owl-dot.active span {
-    background: #ff487e;
+    background: #0000ff;
     box-shadow: 0px 9px 32px 0px rgba(0, 0, 0, 0.07);
 }
 
@@ -535,9 +543,9 @@ header {
 
 .card.pricing.popular {
     border-top-width: 3px;
-    border-color: #4DB6AC #faf6fb #FFF;
+    border-color: #0000ff #faf6fb #FFF;
     box-shadow: 0px 12px 59px 0px rgba(36, 7, 31, 0.11);
-    color: #00695C;
+    color: #0000ff;
 }
 
 .card.pricing .card-head {
@@ -549,7 +557,7 @@ header {
     display: block;
     font-size: 45px;
     font-weight: 300;
-    color: #633991;
+    color: #0000ff;
 }
 
 .card.pricing .card-head .price sub {
@@ -597,7 +605,7 @@ header {
 .call-to-action .tagline {
     font-size: 16px;
     font-weight: 300;
-    color: #E0F2F1;
+    color: rgb(224, 227, 242);
     max-width: 650px;
     margin: 0 auto;
 }
@@ -625,13 +633,13 @@ header {
     line-height: 50px;
     margin: 0 0.3rem;
     border-radius: 5px;
-    color: #FFA000;
+    color: #f5c931;
     transition: all 0.3s ease;
 }
 
 .social-icons a:hover {
     text-decoration: none;
-    background-color: #FFA000;
+    background-color: #f5c931;
     color: #fff;
 }
 
